# subprocess

./: CMakeLists.txt  makefile  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/subprocess/: create_info.h  link_def.h  process_controller.h  subprocess.h
src/: main.cpp  subprocess.cpp
src/unix/: subprocess.cpp
src/win32/: subprocess.cpp
test/: CMakeLists.txt  test.cpp  test_file_name.h
test/sample/: args_to_files.cpp  touch_file.cpp
